1999-03-23  Pascal Obry <obry@gnat.com>

	* xe_reg.ads, xe_reg.adb: New package to handle the NT registry.
	This is needed for the NT binary release. There is one function
	exported, Get_GARLIC_Dir that will return the directory where the
	GARLIC runtime is to be found.

	* Makefile.in, Makefile.am: Change xe_defs.adb generation when
	under Windows NT. In the NT case, xe_defs.adb will use xe_reg
	to find the GARLIC library.
	
1999-02-02  Laurent Pautet  <pautet@scapin.enst.fr>

	* config.sdefault: Fix installation on NT (Arno's suggestion).

1999-01-20  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_utils.adb: Use GLADE_LIBRARY_DIR env. var. to search GARLIC
	lib. This enhancement allows binary release.

1999-01-14  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_stubs.adb: Fix spelling mistake in generated file, which
	prevented the Task_Pool attribute from working.

1999-01-07  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_check.adb: Final fix for 6023-G01. Set filename info back to
 	zero.

1999-01-03  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_check.adb: Deallocate ali test buffer once scanned. Part of
	fix for 6023-G01. Remove typo.

1998-12-08  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_stubs.adb: Change stub generation because one of the Garlic
 	subprograms has changed of profile.

1998-10-23  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_lead.adb: Generate at run-time a default boot server address
	when Starter is a shell script.

1998-10-16  Samuel Tardieu  <sam@inf.enst.fr>

	* All files: update headers.

1998-10-15  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_stubs.adb: Fix stub generation for SP units. Use the body
	file when it exits to generate a SP caller stub (cxe2001).

1998-10-14  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_stubs.adb: Qualify Free procedure so that it doesn't clash
	with GNAT 3.12w GNAT.OS_Lib.Free.

1998-10-07  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_back.adb, xe_back.ads: New function Is_RCI_Or_SP_unit.
